--- a/src/main/resources/templates/add-airplane.html
+++ b/src/main/resources/templates/add-airplane.html
@@ -75,7 +75,7 @@
                     <li><a href="contact.html">Contact</a></li>
                     <li  sec:authorize="isAuthenticated()">
                         <i class="fa fa-user"></i>
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/profile">
                             <th:block th:if="${#request.getRemoteUser() != null}"
                                       th:text="${#request.getRemoteUser()}"></th:block>
                         </a>
