--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -109,7 +109,7 @@
         <div class="row d-flex align-items-center justify-content-center">
             <div class="about-content col-lg-12">
                 <h1 class="text-white">
-                    Profile -> Settings
+                    Settings
                 </h1>
             </div>
         </div>
