Added fragments and master-template. Bug fixes.

--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -463,7 +463,7 @@
                 <input id="bagging32" type="radio" name="bagging" value="54" />
                 <label class="drinkcard-cc bagging32" for="bagging32"></label>
             </div>
-            <input type="checkbox" id="nobagging" name="bagging" value="0">
+            <input type="radio" id="nobagging" name="bagging" value="0">
             <label for="nobagging">I don't want a checked-in bag</label><br>
         </div>
         <input th:name="idFlight" type="hidden" id="selected-ballon"
