--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -133,6 +133,6 @@
 
         <br/>
         <button id="submit-from-add-balloon" type="submit" class="btn btn-primary" onclick="stringlength(document.cardNumber,12,12)">Submit</button>
-        <a type="button" class="btn btn-primary" href="/flights">Back</a>
+        <a type="button" class="btn btn-primary" href="/reservation">Back</a>
     </form>
 </div>
