--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,9 +20,9 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li><a href="/home">Home</a></li>
-                    <li><a href="/flights">Flight</a></li>
-                    <li><a href="/agencies" sec:authorize="hasRole('ROLE_ADMIN')">Agency</a></li>
-                    <li><a href="/airplanes" sec:authorize="hasRole('ROLE_ADMIN')">Airplane</a></li>
+                    <li><a href="/flights">Flights</a></li>
+                    <li><a href="/agencies" sec:authorize="hasRole('ROLE_ADMIN')">Agencies</a></li>
+                    <li><a href="/airplanes" sec:authorize="hasRole('ROLE_ADMIN')">Airplanes</a></li>
                     <li><a href="/verification" sec:authorize="hasRole('ROLE_ADMIN')">Verification</a></li>
                     <li><a href="/contact">Contact</a></li>
                     <li  sec:authorize="isAuthenticated()">
