--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -18,7 +18,48 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/pdf.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
+    <script type="text/javascript">
+        window.onload = function () {
+            document.getElementById("download")
+                .addEventListener("click", () => {
+                    const invoice = this.document.getElementById("invoice");
+                    console.log(invoice);
+                    console.log(window);
+                    let doc_width = 8.27+5;  // A4 measures 210 × 297 millimeters or 8.27 × 11.69 inches
+                    let doc_height = 11.69+1;
+                    let aspect = doc_height / doc_width;
+                    let dpi = 120; // targeting ~1200 window width
+                    let img_width = doc_width * dpi-50;
+                    let img_height = doc_height * dpi;
+                    let win_width = img_width;
+                    let win_height = img_height;
 
+                    // https://html2canvas.hertzen.com/configuration
+                    let html2canvasOpts = {
+                        scale: img_width/win_width,   // equals 1
+                        width: img_width,
+                        height: img_height,
+                        windowWidth: win_width,
+                        windowHeight: win_height,
+                    };
+
+                    // https://rawgit.com/MrRio/jsPDF/master/docs/jsPDF.html
+                    let jsPDFOpts = {
+                        orientation: 'portrait',
+                        unit: 'in',
+                        format: [doc_width, doc_height]
+                    };
+
+                    html2pdf().set({
+                        margin:       [0.01, 0.01, 0.01, 0.01],
+                        filename:     'mkdAirTicketDetails.pdf',
+                        image:        { type: 'jpeg', quality: 0.98 },
+                        html2canvas:  html2canvasOpts,
+                        jsPDF:        jsPDFOpts,
+                    }).from(invoice).save();
+                })
+        }
+    </script>
     <style>
         .logo{
             width: 182px;
@@ -56,7 +97,7 @@
         .type{
             float: right;
             margin-top: -95px;
-            margin-right: 391px;
+            margin-right: 389px;
         }
         .bag{
             float: right;
@@ -94,7 +135,17 @@
     </style>
 </head>
 <body>
-<a href="/verification" class="btn btn-primary">Back to verification search</a>
+<div class="container">
+    <div class="row">
+        <div class="col text-center">
+            <button class="btn btn-primary btn-lg" id="download"><img class="pdflogo" src="/img/pdflogo.jpg" > DOWNLOAD</button>
+
+            <a href="/home" class="btn btn-primary">Back to home</a>
+
+        </div>
+    </div>
+
+</div>
 <div class="card" id="invoice">
     <div class="container mb-4">
         <div class="col mb-3">
@@ -122,13 +173,12 @@
                 <div class="type">
                     <h3>Class type </h3> <p th:text="${order.getReservation().getClassesType()}"></p>
                 </div>
-                <h3>Normal Price</h3> <p th:text= "${order.getFlight().getPrice()} + '€'"></p>
-
-                <div class="bag">
+                <h3>Normal Price</h3> <p th:text= "${order.getFlight().getPrice()} + '€' " ></p>
+                <div class="bag" th:if="${order.getFlight.getPrice() <= 50}">
                     <h3>Bagging</h3> <img class="bagNokg" th:src="${bag}"/> <img th:src="${bagKG}"/>
                 </div>
-
                 <div class="line"></div>
+
                 <h2>PASSENGER DETAILS</h2>
                 <h3>Name</h3> <p th:text="${order.getReservation().getName()}"></p>
                 <div class="surname">
