Added Pagination and Sorting for Agencies page.

--- a/src/main/resources/templates/agencies.html
+++ b/src/main/resources/templates/agencies.html
@@ -28,10 +28,18 @@
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th scope="col">Name of Agency</th>
-                        <th scope="col">City</th>
-                        <th scope="col">Country</th>
-                        <th scope="col">Year of Created</th>
+                        <th scope="col">
+                            <a th:href="@{'/agencies/page/' + ${currentPage} + '?sortField=nameOfAgency&sortDir=' + ${reverseSortDir}}">
+                                Name of Agency </a> </th>
+                        <th scope="col">
+                            <a th:href="@{'/agencies/page/' + ${currentPage} + '?sortField=country&sortDir=' + ${reverseSortDir}}">
+                                City</a></th>
+                        <th scope="col">
+                            <a th:href="@{'/agencies/page/' + ${currentPage} + '?sortField=city&sortDir=' + ${reverseSortDir}}">
+                                Country</a></th>
+                        <th scope="col">
+                            <a th:href="@{'/agencies/page/' + ${currentPage} + '?sortField=yearOfCreated&sortDir=' + ${reverseSortDir}}">
+                                Year of Created </a> </th>
 
                     </tr>
                     </thead>
@@ -60,5 +68,28 @@
             </div>
         </div>
     </div>
+    <nav style="font-size: 22px">
+        <ul th:if = "${totalPages > 1}" class="list-inline pagination pagination-lg justify-content-center">
+            <div class = "col-sm-2">
+                Total Rows: [[${totalItems}]]
+            </div>
+            <li class="list-inline-item page-item">
+                <span th:each="i: ${#numbers.sequence(1, totalPages)}">
+						<a th:if="${currentPage != i}" th:href="@{'/agencies/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
+					</span>
+            </li>
+            <li class="list-inline-item page-item">
+                <a th:if="${currentPage < totalPages}" th:href="@{'/agencies/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+                <span class="list-inline-item " th:unless="${currentPage < totalPages}">Next</span>
+            </li>
+
+            <li class="list-inline-item page-item">
+                <a th:if="${currentPage < totalPages}" th:href="@{'/agencies/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                <span class="list-inline-item " th:unless="${currentPage < totalPages}">Last</span>
+            </li>
+
+    </ul>
+    </nav>
 </div>
 
